--- a/css/styles.css
+++ b/css/styles.css
@@ -149,6 +149,36 @@ header {
   width: 60%;
 }
 
+/*Gallery
+------------------------------*/
+.gallery {
+  background: #ececec;
+}
+.gallery a {
+  color:#f78888 ;
+}
+.gallery .btn {
+  color: #F7FFF7;
+  background: #2F3061;
+  text-decoration: none;
+  padding: 8px;
+  border-radius: 4px;
+  display: inline-block;
+}
+.gallery .btn:hover {
+  background: rgba(47, 48, 97, 80%);
+}
+.gallery-item {
+  overflow: hidden;
+}
+.project-item h3 {
+  margin-top: 0;
+}
+
+
+
+
+}
 
 /* Contact Info
 ------------------------------------*/
