--- a/css/experience.css
+++ b/css/experience.css
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-  color: #2f;
+  color: white;
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', sans-serif;
@@ -28,14 +28,14 @@ a:hover {
 h1 {
   font-size: 100px;
   line-height: 1;
+  font-family: 'Cute Font', cursive;
 }
 h2 {
-  font-size: 45px;
+  font-size: 70px;
+ font-family: 'Cute Font', cursive;
 }
 h1, h2 { /If u put color here, every heading will change/
-  font-family: 'Patua One', cursive;
-  font-family: 'Courier Prime', monospace;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Cute Font', cursive;
   font-weight: 400;
   margin: 0;  
 }
@@ -48,6 +48,8 @@ h1, h2 { /If u put color here, every heading will change/
 }
 h3 {
   margin-bottom: 0;
+  font-family: 'Cute Font', cursive;
+  font-size: 40px;
 }
 .item-details h3 + p {
   font-style: italic;
@@ -64,13 +66,13 @@ h3 {
 }
 
 .work-experience {
-  background: #7EA2AA;
+  background: #d46c4e;
 }
 .work-experience a {
-  color: #2F3061;
+  color: #f9e07f;
 }
 .work-experience .btn {
-  color: #F7FFF7;
+  color: white;
   background: #7EA2AA;
   text-decoration: none;
   padding: 10px;
