--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,6 @@ https://coolors.co/f7fff7-343434-2f3061-ffe66d-a1c6d7
 #A1C6D7 - blue light
 */
 
-
 /* Global styles
 ------------------------------------*/
 html {
@@ -38,16 +37,16 @@ a:hover {
 h1 {
   font-size: 100px;
   line-height: 1;
+  font-family: 'Cute Font', cursive;
 }
 h2 {
-  font-size: 45px;
+  font-size: 55px;
+    font-family: 'Cute Font', cursive;
 }
 h1, h2 { /If u put color here, every heading will change/
-  font-family: 'Patua One', cursive;
-  font-family: 'Courier Prime', monospace;
-  font-family: 'Poppins', sans-serif;
   font-weight: 400;
   margin: 0;  
+  
 }
 
 .content-wrap {
@@ -58,6 +57,8 @@ h1, h2 { /If u put color here, every heading will change/
 }
 h3 {
   margin-bottom: 0;
+  font-family: 'Cute Font', cursive;
+  font-size: 35px;
 }
 .item-details h3 + p {
   font-style: italic;
@@ -77,7 +78,7 @@ h3 {
 /* Profile
 ------------------------------------*/
 header {
-  background: #f78888;
+  background: #43978d;
   color: #F7FFF7;
 }
 
@@ -85,10 +86,10 @@ header {
 /* Projects
 ------------------------------------*/
 .projects {
-  background: #ececec;
+  background: #f9ad6a;
 }
 .projects a {
-  color:#f78888 ;
+  color:#43978d ;
 }
 .projects .btn {
   color: #F7FFF7;
@@ -112,7 +113,7 @@ header {
 /* Work Experience
 ------------------------------------*/
 .work-experience {
-  background: #7EA2AA;
+  background: #d46c4e;
 }
 .work-experience a {
   color: #2F3061;
@@ -144,6 +145,7 @@ header {
   background-size: cover;
   background-position: center right;
   padding-bottom: 100px;
+  color :white;
 }
 .education p {
   width: 60%;
@@ -152,7 +154,7 @@ header {
 /*Gallery
 ------------------------------*/
 .gallery {
-  background: #ececec;
+  background:#f9e07f ;
 }
 .gallery a {
   color:#f78888 ;
@@ -176,21 +178,34 @@ header {
 }
 
 
-
-
-}
-
 /* Contact Info
 ------------------------------------*/
+
 footer {
-  background: #5da2d5;
+  background: #264d59;
   color: #F7FFF7;
+
 }
+
+
 .contact-list {
   list-style-type: none;
   padding: 0;
+   margin-top:0;
+ 
+
 }
 .contact-list a {
   padding: 15px;
   display: inline-block;
+
+}
+
+.divider > section:last-of-type {
+  border-bottom: none
+  }
+
+  .divider > section {
+  border-bottom: 1px dashed #343434;
+  padding: 25px 0;
 }
