--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,26 @@ h3 {
   border-bottom: none;
 }
 
+<style>
+img {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 150px;
+}
+
+img:hover {
+  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+}
+
+img {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 150px;
+}
+</style>
+
 
 /* Profile
 ------------------------------------*/
@@ -163,7 +183,7 @@ header {
   color: #F7FFF7;
   background: #2F3061;
   text-decoration: none;
-  padding: 8px;
+  padding: 2px;
   border-radius: 4px;
   display: inline-block;
 }
@@ -208,4 +228,3 @@ footer {
   .divider > section {
   border-bottom: 1px dashed #343434;
   padding: 25px 0;
-}
